Update na função de locação
Função de locação está temporariamente funcional